First pass fixing pill overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -46,9 +46,9 @@
   scroll-behavior: smooth;
 }
 
-html, body {
-  height: 100%;
-  overflow: hidden;
+html,
+body {
+  min-height: 100%;
 }
 
 .scroll-container::-webkit-scrollbar {
